--- a/app/src/main/res/layout/activity_system_child.xml
+++ b/app/src/main/res/layout/activity_system_child.xml
@@ -7,7 +7,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/color_5bc3e6">
 
         <include layout="@layout/title_layout" />
 
