--- a/app/src/main/res/layout/navigation_item_fragment.xml
+++ b/app/src/main/res/layout/navigation_item_fragment.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
-    <TextView
+    <!--<TextView-->
+    <!--android:id="@+id/tv_article_title"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:gravity="center" />-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="item_fragment"/>
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
